# Singleton

./: .gitignore  CMakeLists.txt  config.txt
include/: Single.h
src/: Single.cpp
test/: testSingle.cpp
